--- a/site/src/components/Nav.astro
+++ b/site/src/components/Nav.astro
@@ -6,7 +6,9 @@ import Icon from "astro-icon";
   <div class="flex items-center justify-center gap-20 pt-4">
     <a
       href="/patches"
-      class="hover:underline text-xl mx-auto text-white flex gap-4 justify-between items-center"
+      class="blue-gradient-top hover:underline text-xl mx-auto text-white flex gap-4 justify-between items-center mt-2 border-solid border-white border-2 shadow-[0px_0px_3px_rgba(0,0,0,.5)] px-3 py-1 rounded-md"
+      style='filter: hue-rotate(45deg)'
+
     >
       <Icon name="ph:scroll-duotone" class="w-8 h-8" />
       <span>Patch Notes</span>
@@ -14,7 +16,8 @@ import Icon from "astro-icon";
 
     <a
       href="/rankings"
-      class="hover:underline text-xl mx-auto text-white flex gap-4 justify-between items-center"
+      class="blue-gradient-top hover:underline text-xl mx-auto text-white flex gap-4 justify-between items-center mt-2 border-solid border-white border-2 shadow-[0px_0px_3px_rgba(0,0,0,.5)] px-3 py-1 rounded-md"
+      style='filter: hue-rotate(155deg)'
     >
       <Icon name="icon-park-outline:ranking" class="w-8 h-8" />
       <span>Rankings</span>
