--- a/site/src/pages/patches.astro
+++ b/site/src/pages/patches.astro
@@ -9,8 +9,8 @@ const patchNotes = await getCollection("patch-notes");
 ---
 
 <Layout title="Cool Game 3 - Patch Notes">
-  <main class='mt-12'>
-    <section class="text-white">
+  <main class='mt-12 text-[#125149]'>
+    <section>
       <ul>
         {
           patchNotes.map(async (patchNote) => {
