--- a/site/src/pages/patches.astro
+++ b/site/src/pages/patches.astro
@@ -9,7 +9,7 @@ const patchNotes = await getCollection("patch-notes");
 ---
 
 <Layout title="Cool Game 3 - Patch Notes">
-  <main class='mt-12 text-[#125149]'>
+  <main class='mt-12 text-white'>
     <section>
       <ul>
         {
