--- a/site/src/style/style.scss
+++ b/site/src/style/style.scss
@@ -19,7 +19,8 @@ html {
 
 body {
   min-height: 100vh;
-  background: linear-gradient(to bottom, #92FE9D, #00C9FF);
+  /*background: linear-gradient(to bottom, #92FE9D, #00C9FF);*/
+  background: linear-gradient(0deg,rgb(1,1,16) 0%,rgb(18,2,23) 48%,rgb(21,14,44) 100%);
   color: black;
   font-family: "Pixelated MS Sans Serif", Geneva, Tahoma, sans-serif;
 }
