Fixed signup form

--- a/site/src/pages/signup.astro
+++ b/site/src/pages/signup.astro
@@ -77,7 +77,7 @@ if (Astro.request.method === "POST") {
 ---
 
 <Layout title="Cool Game 3 - Signup">
-  <main class='text-[#125149]'>
+  <main class='text-white'>
     <h1 class="mt-8 text-4xl font-bold mb-8 text-center">Sign up</h1>
     {
       isSuccess && (
