--- a/site/src/layouts/Layout.astro
+++ b/site/src/layouts/Layout.astro
@@ -1,19 +1,9 @@
 ---
 import "../style/style.scss";
 import "../style/fonts.sass";
-// import { Spa } from "astro-spa";
 import { Picture } from "@astrojs/image/components";
 import Nav from "../components/Nav.astro";
-
-const getNotice = async () => {
-  try {
-    const res = await fetch(`${import.meta.env.SERVER_URL}/notice`);
-    return await res.text();
-  } catch (err) {
-    console.log("Failed to fetch notice");
-  }
-};
-
+import { getNotice } from "../proto/cool-game-web";
 const notice = await getNotice();
 
 export interface Props {
@@ -31,19 +21,12 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    {/*<Spa
-      defaultAnimation={false}
-      progressBarOptions={{
-        height: '5px',
-        secondary: true
-      }}
-    />*/}
     <p
       id="notice"
       style='font-family:"Pixelated Arial"'
       class="whitespace-nowrap fixed z-50 text-[#ff2] text-[15px] pt-1 pb-2 w-full bg-[rgba(0,0,0,.5)] h-[27px] top-0 left-0 overflow-hidden"
     >
-      {notice.slice(1, -1)}
+      {notice && notice.slice(1, -1)}
     </p>
     <header class="relative max-h-[400px] top-[-50px]">
       <a href="/" aria-label="Go home">
