--- a/site/src/components/CharacterPopup.astro
+++ b/site/src/components/CharacterPopup.astro
@@ -25,10 +25,12 @@ const {
   TotalPlayTime,
   Face,
   Hair,
+  EquippedItems
 } = character as CharacterModel;
 
 const expPercentage = ((Exp / ExpRequired) * 100).toFixed(2) + "%";
 const playTimeHrs = Math.floor(TotalPlayTime / 1000 / (60 * 60));
+const equips = EquippedItems.map(itemId => `{itemId:${itemId},version:64}`).join(',')
 ---
 
 <section
@@ -37,7 +39,7 @@ const playTimeHrs = Math.floor(TotalPlayTime / 1000 / (60 * 60));
   <header>
     <figure class='grid justify-items-center'>
       <img
-        src={`https://maplestory.io/api/character/{itemId:${2000+ SkinColor},version:64},{itemId:${Face},version:64},{itemId:${Hair},version:64},{itemId:${12000+SkinColor},version:64}/stand1/animated?resize=1&renderMode=default&flipX=true`}
+        src={`https://maplestory.io/api/character/{itemId:${2000+ SkinColor},version:64},{itemId:${Face},version:64},{itemId:${Hair},version:64},{itemId:${12000+SkinColor},version:64},${equips}/stand1/animated?resize=1&renderMode=default&flipX=true`}
         alt=""
         loading="lazy"
       />
