--- a/site/src/layouts/Layout.astro
+++ b/site/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "../style/style.scss";
+import "../style/utility.sass";
 import "../style/fonts.sass";
 import { Picture } from "@astrojs/image/components";
 import Nav from "../components/Nav.astro";
